--- a/Locales/ru/searchResults.html
+++ b/Locales/ru/searchResults.html
@@ -29,7 +29,7 @@
 			</h3>
 
 			<div class="label sort noprint" id="sortBar">
-				<span class="label">Sort by</span>
+				<span class="label" id="sortHolder">Sort by</span>
 				<a href="#!/search/sortby/name" class="clickablesort"><span class="asc" id="sbt_name"></span>Name</a> <a href="#!/search/sortby/popularity" class="clickablesort"><span class="none" id="sbt_popularity"></span>Popularity</a> <a href="#!/search/sortby/stars"  class="clickablesort"><span class="desc" id="sbt_stars"></span>Stars</a> <a href="#!/search/sortby/price" class="clickablesort"><span class="none" id="sbt_price"></span>Price</a>
 			</div>
  </script>
