fixed language switch issue. wrong context was used.

--- a/Locales/de/main.html
+++ b/Locales/de/main.html
@@ -108,7 +108,7 @@
         </ul>
     </script>
     <script type="text/html" id="logobar_tmpl">
-        <a id="logo" href="http://bookenizer.com"><img src="/img/logo.png" alt="Bookenizer"/></a>
+        <a id="logo" href="/"><img src="/img/logo.png" alt="Bookenizer"/></a>
         <a id="contactus" href="#" title="Kontakt Mit Uns">Kontakt Mit Uns</a>
         <strong>Online Reservierungsservice</strong>
     <script type="text/html" id="searchbar_tmpl">
