--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -111,7 +111,7 @@
         </ul>
     </script>
     <script type="text/html" id="logobar_tmpl">
-        <a id="logo" href="http://bookenizer.com"><img src="/img/logo.png" alt="Bookenizer"/></a>
+        <a id="logo" href="/"><img src="/img/logo.png" alt="Bookenizer"/></a>
         <a id="contactus" href="#" title="Contact Us">Contact Us</a>
         <strong>Online Reservation Service</strong>
     <script type="text/html" id="searchbar_tmpl">
