--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -108,7 +108,7 @@
         </ul>
     </script>
     <script type="text/html" id="logobar_tmpl">
-        <a id="logo" href="http://bookenizer.com"><img src="/img/logo.png" alt="Bookenizer"/></a>
+        <a id="logo" href="/"><img src="/img/logo.png" alt="Bookenizer"/></a>
         <a id="contactus" href="#" title="Контакты">Контакты</a>
         <strong>Система Он-Лайн бронирования</strong>
     </script>
