switched to synch ajax mode. for test in FF3

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
         var Configuration=Backbone.Model.extend({
             defaults:{
-                "ajaxMode":true,
+                "ajaxMode":false,
                 "serviceUrl":"/bookenizer-stubs/hms-services/",
                 "lang":defLanguage,
                 "searchType":"quick",
